bug fix for mobile : hero is now visible

--- a/_sass/lens/partials/_loop.sass
+++ b/_sass/lens/partials/_loop.sass
@@ -10,6 +10,7 @@
 
 .hero
     padding: 0
+    height: 80%
     background-size: cover
     background-position: center center
     background-repeat: no-repeat
